# ci_jenkins_test

./: CMakeLists.txt  Jenkinsfile
cpp/: CMakeLists.txt  hello.cpp
scripts/: build.py
